# binary-fractions-rs

./: .gitignore  Cargo.toml  README.md  binary.py  rustfmt.toml
examples/: example.rs
examples/sample/: Cargo.toml
examples/sample/src/: main.rs
src/: binary.rs  lib.rs  twos-complement.rs
src/binary/: twos-complement.rs
tests/: test.rs
